fixing some issues on mobile for index css

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -18,6 +18,7 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1;
     /* color:white; */
 }
 nav ul {
@@ -149,29 +150,46 @@ footer {
     flex-direction: row;
     justify-content: center;
     height: 3rem;
-    width: 100%;
+    max-width: 100%;
     background-color: #662E14;
     color: whitesmoke;
 }
 /* Media rules */
 @media (max-width:600px) {
+    #welcome-section {
+        top: 60px;
+        position: relative;
+        width: auto;
+        height: auto;
+    }
     nav ul li {
         margin-right: 2em;
-        font-size: 1em;
+        font-size: 0.8em;
     }
     #title-m {
-        font-size: 1.5em;
+        font-size: 1.3em;
         text-shadow:  2px 3px #662E14;
     }
+    .headers {
+        font-size: 1.3em;
+        margin-top: 10px;
+    }
     #box-text {
-        width: 90%;
+        width: 95%;
         font-size: 0.9em;
     }
     #contact-me ul {
-        width: 90%;
+        width: 80%;
     }
     .logos {
-        max-width: 50px;
-        max-height: 50px;
+        max-width: 40px;
+        max-height: 40px;
+    }
+    .project-tile {
+        max-width: 80%;
+        max-height: 70%;
+    }
+    .project-h {
+        font-size: 1.1em;
     }
 }
